--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "pdfjs-dist": "^2.16.105",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
