--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "file-dialog": "^0.0.8",
     "fuse.js": "^7.0.0",
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
